# rpm_env

./: README.md  build.sh  compose-up.sh  docker-compose.yml  get.sh  rpm_build.sh
el6/: Dockerfile  build_6.sh  docker-compose.yml  low_build_6.sh
el6/rpmbuild/SPECS/: jobarranger6.spec
el7/: build_7.sh  docker-compose.yml  infinite.sh  low_build_7.sh
el7/rpmbuild/SPECS/: jobarranger8.spec
el8/: build_8.sh
el8/rpmbuild/SPECS/: jobarranger8.spec
el9/: Dockerfile  README.md  build_9.sh  cent9.repo  docker-compose.yml
el9/rpmbuild/RPMS/x86_64/: jobarranger-agentd-6.1.1-1.el9.x86_64.rpm  jobarranger-agentd-debuginfo-6.1.1-1.el9.x86_64.rpm  jobarranger-debuginfo-6.1.1-1.el9.x86_64.rpm  jobarranger-debugsource-6.1.1-1.el9.x86_64.rpm  jobarranger-server-mysql-6.1.1-1.el9.x86_64.rpm  jobarranger-server-mysql-debuginfo-6.1.1-1.el9.x86_64.rpm  jobarranger-server-postgresql-6.1.1-1.el9.x86_64.rpm  jobarranger-server-postgresql-debuginfo-6.1.1-1.el9.x86_64.rpm
el9/rpmbuild/SOURCES/jobarranger-6.1.1/: install-gen.sh
el9/rpmbuild/SOURCES/jobarranger-6.1.1/src/jobarg_server/jajobnet/: Makefile  Makefile.am  jajobnet.h  jajobnetkill.h  jajobnetrun.c
el9/rpmbuild/SOURCES/jobarranger-6.1.1/src/jobarg_session/: Makefile.am  Makefile.in
el9/rpmbuild/SPECS/: jobarranger9.spec
rpmbuild/SPECS/: jobarranger8.spec
server-agent/amz2/: build_amz2.sh  docker-compose.yml
server-agent/amz2/rpmbuild/SPECS/: jobarranger.spec
server-agent/amz2023/: build_amz2023.sh  docker-compose.yml
server-agent/amz2023/rpmbuild/SPECS/: jobarranger.spec
server-agent/el6/: Dockerfile  build_6.sh  cent6.repo  dbus-libs-1.10.24-15.el7.x86_64.rpm  docker-compose.yml  maria.repo  sleep10.sh
server-agent/el6/rpmbuild/SPECS/: jobarranger6.spec
server-agent/el7/: Dockerfile  build_7.sh
server-agent/el8/: build_8.sh  docker-compose.yml
server-agent/el8/rpmbuild/SPECS/: jobarranger8.spec
server-agent/el9/: Dockerfile  build_9.sh  docker-compose.yml
(+171 files in other folders)
