## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libjajobnet.a

libjajobnet_a_CFLAGS = -I@top_srcdir@/jainclude/

libjajobnet_a_SOURCES = \
	jajobnetsummaryready.c jajobnetsummaryready.h \
	jajobnetready.c jajobnetready.h \
	jajobnetrun.c jajobnetrun.h \
	jajobnet.c jajobnet.h
